; ModuleID = '/home/carl/AnghaBench/git/extr_progress.c_finish_if_sparse.c'
source_filename = "/home/carl/AnghaBench/git/extr_progress.c_finish_if_sparse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.progress = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.progress*)* @finish_if_sparse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @finish_if_sparse(%struct.progress* %0) #0 {
  %2 = alloca %struct.progress*, align 8
  store %struct.progress* %0, %struct.progress** %2, align 8
  %3 = load %struct.progress*, %struct.progress** %2, align 8
  %4 = icmp ne %struct.progress* %3, null
  br i1 %4, label %5, label %24

5:                                                ; preds = %1
  %6 = load %struct.progress*, %struct.progress** %2, align 8
  %7 = getelementptr inbounds %struct.progress, %struct.progress* %6, i32 0, i32 2
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %5
  %11 = load %struct.progress*, %struct.progress** %2, align 8
  %12 = getelementptr inbounds %struct.progress, %struct.progress* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.progress*, %struct.progress** %2, align 8
  %15 = getelementptr inbounds %struct.progress, %struct.progress* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %13, %16
  br i1 %17, label %18, label %24

18:                                               ; preds = %10
  %19 = load %struct.progress*, %struct.progress** %2, align 8
  %20 = load %struct.progress*, %struct.progress** %2, align 8
  %21 = getelementptr inbounds %struct.progress, %struct.progress* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @display_progress(%struct.progress* %19, i64 %22)
  br label %24

24:                                               ; preds = %18, %10, %5, %1
  ret void
}

declare dso_local i32 @display_progress(%struct.progress*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
